--- a/documentation/main.tex
+++ b/documentation/main.tex
@@ -82,39 +82,17 @@ error?} \hspace{3em} -- Franz Kafka, \emph{The Castle}
 \subsection{Functions in the getopts module}
 \input{autotext/esl_getopts_functions}
 
-
-
-\newpage
-\section{The gev module: generalized extreme value statistics}
-\input{../esl_gev}
-\subsection{Functions in the gev module}
-\input{autotext/esl_gev_functions}
-
-
-\newpage
-\section{The gumbel module: Type I extreme value (Gumbel) statistics}
-\input{../esl_gumbel}
-\subsection{Functions in the gumbel module}
-\input{autotext/esl_gumbel_functions}
-
-
-
-
 \newpage
 \section{The keyhash (key) module: keyword hashing, associative array emulation}
 \input{../esl_keyhash}
 \subsection{Functions in the keyhash module}
 \input{autotext/esl_keyhash_functions}
 
-
-
 \newpage
 \section{The msa module: multiple sequence alignment i/o}
 \input{../esl_msa}
 \subsection{Functions in the msa module}
 \input{autotext/esl_msa_functions}
-
-
 
 \newpage
 \section{The random (rnd) module: pseudorandom numbers and basic sampling}
@@ -128,15 +106,11 @@ error?} \hspace{3em} -- Franz Kafka, \emph{The Castle}
 1.11. \\ 
 \end{quote}     
 
-
-
 \newpage
 \section{The regexp module: regular expression matching}
 \input{../esl_regexp}
 \subsection{Functions in the regexp module}
 \input{autotext/esl_regexp_functions}
-
-
 
 \newpage
 \section{The sqio module: i/o of unaligned sequence files}
@@ -144,15 +118,11 @@ error?} \hspace{3em} -- Franz Kafka, \emph{The Castle}
 \subsection{Functions in the sqio (sio) module}
 \input{autotext/esl_sqio_functions}
 
-
-
 \newpage
 \section{The stack module: pushdown stacks for integers, chars, and pointers}
 \input{../esl_stack}
 \subsection{Functions in the stack module}
 \input{autotext/esl_stack_functions}
-
-
 
 \newpage
 \section{The vectorops module: simple vector operations}
@@ -160,13 +130,73 @@ error?} \hspace{3em} -- Franz Kafka, \emph{The Castle}
 \subsection{Functions in the vectorops module}
 \input{autotext/esl_vectorops_functions}
 
-
-
 \newpage
 \section{The wuss module: RNA secondary structure annotation}
 \input{../esl_wuss}
 \subsection{Functions in the wuss module}
 \input{autotext/esl_wuss_functions}
+
+
+\newpage
+\chapter{Statistics modules}
+\input{statistics}
+
+\newpage
+\section{\eslmod{esl\_exponential}: Exponential distributions}
+\input{../esl_exponential}
+\subsection{Functions in the exponential module}
+\input{autotext/esl_exponential_functions}
+
+\newpage
+\section{The gamma module: gamma distributions}
+\input{../esl_gamma}
+\subsection{Functions in the gev module}
+\input{autotext/esl_gamma_functions}
+
+\newpage
+\section{The gev module: generalized extreme value distributions}
+\input{../esl_gev}
+\subsection{Functions in the gev module}
+\input{autotext/esl_gev_functions}
+
+\newpage
+\section{The gumbel module: Type I extreme value (Gumbel) statistics}
+\input{../esl_gumbel}
+\subsection{Functions in the gumbel module}
+\input{autotext/esl_gumbel_functions}
+
+\newpage
+\section{hyperexp: Hyperexponential distributions}
+\input{../esl_hyperexp}
+\subsection{Functions in the hyperexp module}
+\input{autotext/esl_hyperexp_functions}
+
+\newpage
+\section{mixdchlet: Mixture Dirichlet distributions}
+%\input{../esl_mixdchlet}
+\subsection{Functions in the mixdchlet module}
+%\input{autotext/esl_mixdchlet_functions}
+
+\newpage
+\section{mixgev: Mixture generalized extreme value distributions}
+%\input{../esl_mixgev}
+\subsection{Functions in the mixgev module}
+\input{autotext/esl_mixgev_functions}
+
+\newpage
+\section{stretchexp: Stretched exponential distributions}
+\input{../esl_stretchexp}
+\subsection{Functions in the stretchexp module}
+\input{autotext/esl_stretchexp_functions}
+
+\newpage
+\section{weibull: Weibull distributions}
+\input{../esl_weibull}
+\subsection{Functions in the weibull module}
+\input{autotext/esl_weibull_functions}
+
+
+
 
 
 
