--- a/esl_weibull.tex
+++ b/esl_weibull.tex
@@ -6,8 +6,8 @@ In the literature, the Weibull is sometimes called a ``stretched
 exponential'' distribution when its shape parameter $\tau$ is less
 than 1. ``Stretched exponential'' distributions in the literature are
 either Weibull (PDF $ = \lambda \tau (\lambda x)^\tau exp\left[-
-(\lambda x)^tau]$ or a more simple PDF $\propto exp\left[-
-{\lambda(x-\mu}}^tau]$. Easel treats the latter form in the
+(\lambda x)^tau \right]$ or a more simple PDF $\propto exp\left[-
+{\lambda(x-\mu)}^tau \right]$. Easel treats the latter form in the
 \eslmod{stretchexp} module.
 
 \subsection{Weibull densities}
