--- a/esl_stretchexp.tex
+++ b/esl_stretchexp.tex
@@ -7,7 +7,13 @@ though they have somewhat similar functional forms, and the Weibull is
 confusingly sometimes referred to as a ``stretched exponential
 distribution'' in the literature. (See the \eslmod{weibull} module.)
 
-\subsection{Stretched exponential densities}
+\begin{tabular}{lcll}\hline
+Variate    & $x$         & \ccode{double} & $\mu \leq x < \infty$ \\
+Location   & $\mu$       & \ccode{double} & $-\infty < \mu < \infty$\\
+Scale      & $\lambda$   & \ccode{double} & $\lambda > 0$ \\ 
+Shape      & $\tau$      & \ccode{double} & $\tau > 0$ \\ \hline
+\end{tabular}
+
 
 The probability density function (PDF) is:
 
@@ -23,7 +29,7 @@ expression. It is obtained from the integral:
 P(X \leq x) & = & \int_{\mu}^{x} P(X=z) dz\\
             & = & \frac{\lambda \tau}{\Gamma(\frac{1}{\tau})} \int_\mu^{x} e^{- [\lambda(z-\mu)]^{\tau}} dz\\
 \label{eqn:stretchexp_cdf1}
-\end{equation}
+\end{eqnarray*}
 
 By change-of-variables $t = [\lambda(z-\mu)]^{\tau}$,
 $t^{\frac{1}{\tau}} = \lambda(z-\mu)$, $dz = \frac{1}{\lambda \tau}
@@ -33,12 +39,4 @@ t^{\frac{1}{\tau}-1} dt$, this can be rewritten as:
 P(X \leq x)  = \frac{1}{\Gamma(\frac{1}{\tau})}
 \int_0^{[\lambda(x-\mu)]^{\tau}} e^{-t} t^{\frac{1}{\tau}-1} dt
 \]
-
-Variate $x$ ranges $\mu \leq x < \infty$.
-
-Location parameter $\mu$ is unconstrained, $-\infty < \mu < \infty$.
-
-Scale parameter $\lambda$ is nonnegative, $\lambda > 0$. 
-
-Shape parameter $\tau$ is nonnegative, $\tau > 0$. 
 
