Portability improvements, in response to Zasha compiling on a non-POSIX system. esl_strcasecmp added as a portable drop-in for strcasecmp. esl_INFINITY revised to 1/0, because setting it by overflow doesn't work w/ a Microsoft compiler.
git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@80 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/documentation/main.tex
+++ b/documentation/main.tex
@@ -28,6 +28,13 @@
 \hspace*{1em}\hfill \emph{Lack of skill dictates economy of style.} \hspace{1em} -- Joey Ramone
 \end{quote}     
 
+%\vspace*{\fill}
+%\begin{quote}
+%\emph{The problem Autoconf addresses is that the world is a mess.}
+%\hspace{3em} -- GNU Autoconf documentation
+%\end{quote}     
+
+
 \newpage
 \chapter{Core modules}
 
