Working on histogram documentation, and improving/simplifying the API.
git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@86 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/documentation/main.tex
+++ b/documentation/main.tex
@@ -149,55 +149,61 @@ error?} \hspace{3em} -- Franz Kafka, \emph{The Castle}
 \input{statistics}
 
 \newpage
+\section{\eslmod{esl\_histogram}: Collecting histograms}
+\input{../esl_histogram}
+\subsection{Functions in the histogram module}
+\input{autotext/esl_histogram_functions}
+
+\newpage
 \section{\eslmod{esl\_exponential}: Exponential distributions}
 \input{../esl_exponential}
 \subsection{Functions in the exponential module}
 \input{autotext/esl_exponential_functions}
 
 \newpage
-\section{The gamma module: gamma distributions}
+\section{\eslmod{esl\_gamma}: Gamma distributions}
 \input{../esl_gamma}
-\subsection{Functions in the gev module}
+\subsection{Functions in the gamma module}
 \input{autotext/esl_gamma_functions}
 
 \newpage
-\section{The gev module: generalized extreme value distributions}
+\section{\eslmod{esl\_gev}: Generalized extreme value distributions}
 \input{../esl_gev}
 \subsection{Functions in the gev module}
 \input{autotext/esl_gev_functions}
 
 \newpage
-\section{The gumbel module: Type I extreme value (Gumbel) statistics}
+\section{\eslmod{esl\_gumbel}: Type I extreme value (Gumbel) statistics}
 \input{../esl_gumbel}
 \subsection{Functions in the gumbel module}
 \input{autotext/esl_gumbel_functions}
 
 \newpage
-\section{hyperexp: Hyperexponential distributions}
+\section{\eslmod{esl\_hyperexp}: Hyperexponential distributions}
 \input{../esl_hyperexp}
 \subsection{Functions in the hyperexp module}
 \input{autotext/esl_hyperexp_functions}
 
 \newpage
-\section{mixdchlet: Mixture Dirichlet distributions}
+\section{\eslmod{esl\_mixdchlet}: Mixture Dirichlet distributions}
 %\input{../esl_mixdchlet}
 \subsection{Functions in the mixdchlet module}
 %\input{autotext/esl_mixdchlet_functions}
 
 \newpage
-\section{mixgev: Mixture generalized extreme value distributions}
+\section{\eslmod{esl\_mixgev}: Mixture generalized extreme value distributions}
 %\input{../esl_mixgev}
 \subsection{Functions in the mixgev module}
 \input{autotext/esl_mixgev_functions}
 
 \newpage
-\section{stretchexp: Stretched exponential distributions}
+\section{\eslmod{esl\_stretchexp}: Stretched exponential distributions}
 \input{../esl_stretchexp}
 \subsection{Functions in the stretchexp module}
 \input{autotext/esl_stretchexp_functions}
 
 \newpage
-\section{weibull: Weibull distributions}
+\section{\eslmod{esl\_weibull}: Weibull distributions}
 \input{../esl_weibull}
 \subsection{Functions in the weibull module}
 \input{autotext/esl_weibull_functions}
