--- a/esl_exponential.tex
+++ b/esl_exponential.tex
@@ -18,7 +18,7 @@ P(X \leq x) = 1 - e^{-\lambda (x - \mu)}
 \end{equation}
 
 
-\section{Sampling}
+\subsection{Sampling}
 
 
-\section{Maximum likelihood fitting}
+\subsection{Maximum likelihood fitting}
