--- a/esl_histogram.tex
+++ b/esl_histogram.tex
@@ -1,192 +1,262 @@
 
+The \eslmod{esl\_histogram} module is for collecting scores, fitting
+them to expected distributions, and displaying them.
 
-
-\subsection{The histogram API}
-
+\subsection{Overview of the histogram API}
 
 \vspace{1em}
 \begin{tabular}{ll}  \hline
-   \multicolumn{2}{c}{\textbf{The \ccode{ESL\_HISTOGRAM} object}}\\
+   \multicolumn{2}{c}{\textbf{Collecting data in an \ccode{ESL\_HISTOGRAM}}}\\
 \ccode{esl\_histogram\_Create()}       & Create a new \ccode{ESL\_HISTOGRAM}. \\
 \ccode{esl\_histogram\_CreateFull()}   & A \ccode{ESL\_HISTOGRAM} to keep all data samples   \\
 \ccode{esl\_histogram\_Destroy()}      & Frees a \ccode{ESL\_HISTOGRAM}.\\
-   \multicolumn{2}{c}{\textbf{Collecting and accessing data in a histogram}}\\
 \ccode{esl\_histogram\_Add()}          & Add a sample to the histogram. \\
-\ccode{esl\_histogram\_Sort()}         & Sorts samples in a full histogram. \\
-\ccode{esl\_histogram\_GetScoreAtRank()}& Retrieve a high score.\\
+   \multicolumn{2}{c}{\textbf{Declarations about binned data, before fitting}}\\
+\ccode{esl\_histogram\_DeclareCensoring()}  & Collected data are left-censored.\\
+\ccode{esl\_histogram\_DeclareRounding()}   & Samples are no more accurate than bins.\\
+\ccode{esl\_histogram\_SetTail()}           & Only tail $>$ some threshold is ``observed''.\\
+\ccode{esl\_histogram\_SetTailByMass()}     & Only right tail mass is ``observed''.\\
+   \multicolumn{2}{c}{\textbf{Accessing raw data samples}}\\
+\ccode{esl\_histogram\_GetRank()}      & Retrieve a high score.\\
+\ccode{esl\_histogram\_GetData()}      & Retrieve all raw scores.\\
+\ccode{esl\_histogram\_GetTail()}      & Retrieve raw scores above some threshold.\\
+\ccode{esl\_histogram\_GetTailByMass()}& Retrieve raw scores in right tail mass.\\
+   \multicolumn{2}{c}{\textbf{Setting expected counts}}\\
+\ccode{esl\_histogram\_SetExpect()}       & Set expected counts for complete distribution.\\
+\ccode{esl\_histogram\_SetExpectedTail()} & Set expected counts for right tail.\\
+   \multicolumn{2}{c}{\textbf{Output}}\\
 \ccode{esl\_histogram\_Print()}        & Print a ``pretty'' ASCII histogram. \\
 \ccode{esl\_histogram\_Plot()}         & Output a histogram in xmgrace XY format. \\
 \ccode{esl\_histogram\_PlotSurvival()} & Output $P(X>x)$ in xmgrace XY format. \\
-\ccode{esl\_histogram\_PlotTheory()}   & Output some expected distribution in xmgrace XY format. \\
 \ccode{esl\_histogram\_PlotQQ()}       & Output a Q-Q plot in xmgrace XY format. \\
-\ccode{esl\_histogram\_Goodness()}     & Evaluate goodness of fit between observed, expected.\\
-   \multicolumn{2}{c}{\textbf{Declaring if and how data are censored}}\\
-\ccode{esl\_histogram\_TrueCensoring()}      & Declare that data are censored. \\
-\ccode{esl\_histogram\_VirtCensorByValue()}  & Declare that only data $>\phi$ are considered to be ``observed''. \\
-\ccode{esl\_histogram\_VirtCensorByMass()}   & Declare that only the top $x$\% of the data are considered to be observed. \\
-\ccode{esl\_histogram\_DeclareTailfitting()} & Declare that goodness of fit applies only to the observed tail.\\
-\ccode{esl\_histogram\_DeclareRounding()}    & Declare that the data must be treated in bins.\\
-\ccode{esl\_histogram\_SetExpect()}          & Set expected values \\
+   \multicolumn{2}{c}{\textbf{Goodness of fit testing}}\\
+\ccode{esl\_histogram\_Goodness()}     & Evaluate fit between observed, expected.\\
 \hline
 \end{tabular}
 \vspace{1em}
 
+\subsection{Example of using the histogram API}
 
-\subsection{Collecting data}
+The example code below stores 10,000 samples from a Gumbel
+distribution in a histogram, retrieves a vector containing the sorted
+samples, fits a Gumbel distribution to that dataset, sets the expected
+counts in the histogram, prints the observed and expected counts in an
+ASCII histogram, and evaluates the goodness-of-fit.
+
+\input{cexcerpts/histogram_example1}
+
+Some points of interest:
+
+\begin{itemize}
+\item When the histogram is created, the arguments \ccode(-100, 100, 0.5)
+      tell it to bin data into bins of width 0.5, initially
+      starting at -100 and ending at 100. This initialization
+      is described below (see ``Specifying binning of data values'').
+
+\item Samples are collected one at a time with
+  \ccode{esl\_histogram\_Add()}.
+
+\item After the data have been collected in a \emph{full} histogram, a
+   vector of sorted raw data values can be retrieved using functions
+   like \ccode{esl\_histogram\_GetData()}, and used to fit parameters
+   of an expected distribution to the data.
+
+\item In addition to the observed binned counts, you can optionally
+   set \emph{expected} binned counts in the histogram by calling
+   \ccode{esl\_histogram\_SetExpect()} and providing pointers
+   to an appropriate distribution function and its parameters.
+
+\item The \ccode{esl\_histogram\_Print()} function shows an ASCII text
+   representation of the observed counts (and expected counts, if set)
+   that looks a lot like FASTA's nice histogram output.
+
+\item The \ccode{esl\_histogram\_Goodness()} function compares the
+   observed and expected binned counts, and calculates two goodness of
+   fit tests: a G-test, and a $\chi^2$ test.
+\end{itemize}
 
 
-\subsection{Declaring different kinds of observed and expected data situations}
+\subsection{Specifying binning of data values}
 
-If you do nothing else after collecting the data, the data are assumed
-to be \emph{complete}: you observed all samples. If you fit to any
-expected distribution, the expected distribution is assumed to
-describe the complete data, and its parameters are to be fitted to the
-complete data. This is the simplest, most obvious case.
+The histogram collects data values into bins. When the histogram is
+created, the bin width and the relative offset of the bins is
+permanently set, and an initial range is allocated. 
 
-Other situations may arise. The \eslmod{histogram} module was
-designed to capture scores, and we are often most interested in the
-highest, most significant scores. If a theoretically expected
-distribution isn't a perfect fit to the observed data, we may want to
-focus parameter fitting only on the rightmost (highest scoring) tail
-of the observed data. This allows a fit to ignore low-scoring
-outliers, for example. A similar case arises when we don't understand
-the expected distribution of the complete data, but the tail seems to
-follow a predictable form (such as an exponential tail); again we only
-want to focus our fit only on the right tail.
+For example, the call \ccode{esl\_histogram\_Create(-10, 10, 0.5)}
+creates 40 bins of width 0.5 from -10 to 10, with the first bin
+collecting scores from $-10 < x \leq -9.5$, and the last bin
+collecting scores $9.5 < x \leq 10.0$.
 
-In statistics, a \emph{censored} dataset arises when we only observe
-samples with values in a particular range, and a known number $z$ of
-samples have unknown values outside the observed range. (For instance,
-imagine measuring the expected lifetime of light bulbs by checking
-1000 bulbs every day for a year; we would only see some bulbs fail,
-and for all the others all we know is that their failure time is $>1$
-year.) Easel deals with all the cases it considers to be ``of
-interest'' (from the perspective of score histograms, where the right
-tail is the interesting part) by considering all such cases to be
-examples of left-censored datasets. 
+The lower bound of the initialization permanently sets the relative
+offset of the bins. That is, \ccode{esl\_histogram\_Create(-10, 10,
+0.5)} makes the first bin $-10 < x \leq -9.5$, whereas
+\ccode{esl\_histogram\_Create(-10.1, 9.9, 0.5)} makes the first bin
+$-10.1 < x \leq -9.6$.
 
-Specifically, Easel can deal with five different ``use cases'' in this
-regard:
+Aside from that, the initial range is only a suggestion. You can add
+any real-valued $x$ to the histogram. The histogram will silently
+reallocate itself to a wider range as needed. This is only limited by
+the amount of RAM you have for bins.
+
+
+\subsection{Optional collection of raw data values}
+
+A histogram would normally store only binned counts, so it can
+efficiently summarize even very large numbers of samples.
+
+In some cases it is useful to keep a list of the raw data values --
+for instance, for accurate parameter fitting to expected
+distributions. This is done by creating a ``full'' histogram with
+\ccode{esl\_histogram\_CreateFull()} instead of
+\ccode{esl\_histogram\_Create()}. (The example code above did this,
+because it also did parameter fitting.) After data have been collected
+in a full histogram, individual raw values or pointers to sorted
+arrays of raw values can be retrieved using the
+\ccode{esl\_histogram\_Get*} functions.
+
+
+\subsection{Different parameter fitting scenarios}
+
+By default, the data you collect are assumed to be \emph{complete}.
+You observed all samples; if you fit to any expected distribution, the
+expected distribution is assumed to describe the complete data; the
+parameters of the expected distribution are to be fitted to an array
+of the complete raw data samples; and any goodness of fit test is to
+be applied to the complete data. This is the simplest, most obvious
+case.
+
+Other situations may arise. In addition to complete data, Easel is
+designed to deal with four other cases:
 
 \begin{enumerate}
-\item The data are complete, and fit to a distribution that describes the
-      complete data. This is the usual case.
+\item The collected data are complete, and they are fit to a
+      distribution that describes the complete data, but parameter
+      fitting is done only in the right (highest-scoring) tail. This
+      makes parameter fitting focus on the most important,
+      high-scoring region of a score distribution, and ignore
+      low-scoring outliers.
 
-\item The data are complete, and they are fit to a distribution that
-      describes the complete data, but the fitting and the
-      goodness-of-fit test are performed only in the right
-      (highest-scoring) tail with values $> \phi$. This is the case
-      when we care more about the high-scoring right tail and we want
-      to focus our parameter fitting there.
+\item The collected data are complete, but they are fit to a
+      distribution that only describes the right (highest scoring)
+      tail, and the goodness-of-fit test is only performed on that
+      tail. This case arises when we don't know the form of the
+      expected distribution for the complete data, but the tail
+      follows a predictable decay (an exponential tail, for example).
 
-\item The data are complete, but they are fit to a distribution that
-      only describes the right (highest scoring) tail $> \phi$, and
-      the goodness-of-fit test is only performed on that tail. This
-      is the case where we don't know a good distribution to fit all
-      the data, but we can fit the tail to something (for instance, an
-      exponential tail).
+\item The collected data are left-censored such that no values $<
+      \phi$ were recorded in the histogram, but the data are fit to a
+      complete distribution that predicts the probability even of the
+      censored (unobserved) values. Goodness of fit is only evaluated
+      in the observed data. (This case is what is actually meant by
+      left-censored data.)
 
-\item The data are censored such that no values $< \phi$ were
-      recorded. The data are fit to a complete distribution,
-      predicting the probability even of the censored (unobserved)
-      values. Goodness of fit can only be evaluated in the observed
-      data. This case is what is actually meant by censored data, but
-      I have not seen it arise in sequence analysis.
-
-\item The data are censored such that no values $< \phi$ were
-      recorded. Only these observed data in the right tail are fit to
-      a distribution (such as an exponential tail), and the goodness of fit
-      is only evaluated in this observed tail. This case only
-      arises by construction -- that is, it is possible to call existing
-      Easel functions to set up this case, but I have not seen it
-      arise in practical use.
+\item The high-scoring right tail of the collected data are fit as
+      \emph{binned} counts (not raw sample values) to a distribution
+      that describes the tail, such as an exponential. This case
+      becomes useful when the raw data values have limited precision
+      (because of rounding, for example), which can cause numerical
+      problems with parameter fitting to tails.
 \end{enumerate}
 
-To set up the appropriate case, after you collect data samples in a
-histogram, you \emph{declare} your problem by calling appropriate
-functions in the histogram API.
-
-To declare that a dataset in histogram \ccode{h} is truly
-left-censored at some threshold $\phi$, with $z$ unobserved sample
-values below that threshold, you call
-\ccode{esl\_histogram\_TrueCensoring(h, z, phi)}. 
-
-To declare that the dataset in histogram \ccode{h} should be
-\emph{treated as if} it were left-censored, by ignoring all values
-except those in the right tail, you have two options. You can either
-set the threshold $\phi$ yourself with
-\ccode{esl\_histogram\_VirtCensorByValue(h, phi)}, or you can specify
-that you want to consider the rightmost fraction $t$ of the tail by
-calling \ccode{esl\_histogram\_VirtCensorByMass(h, t)} (in which case
-the appropriate threshold $t$ is identified). Note, however, that the
-$\phi$ or $t$ threshold that you provide for virtual censoring is only
-a suggestion.[...]
-
-To declare that you are going to fit the ``observed'' data to a
-distribution that only describes that observed tail, you call
-\ccode{esl\_histogram\_DeclareTailfitting(h)}.
-
-\subsubsection{Virtual censoring suggests but does not specify the threshold}
-
-Because the data values are binned in the histogram object, it is
-problematic to set any arbitrary threshold $\phi$ or $t$ for virtual
-censoring, because that would mean splitting one data bin's total
-counts into unobserved and observed counts. Unless we've kept the full
-set of data values in addition to the binned counts, we can't do
-that. Instead, the two virtual censoring functions treat $\phi$ or $t$
-as \emph{suggestions}, and they set the actual $\phi$ threshold to be
-the lower bound of the bin that the suggested $\phi$ or $t$ threshold
-fell in. Thus the actual $\phi$ will always be $\geq$ the suggested
-$\phi$, and the actual observed tail mass will be $\geq$ the suggested
-$t$. If you need to know the actual values that got set in your
-histogram \ccode{h}, you can access \ccode{h->phi} or calculate the
-observed mass as \ccode{(float) (h->n - h->z) / (float) h->n}.
-
-\subsubsection{More gory detail about the internals}
-
-To implement the above, the \ccode{ESL\_HISTOGRAM} object tracks the
-following variables:
-
-\begin{description}
-\item[\emcode{n}]  The number of data samples actually recorded in the histogram.
-\item[\emcode{z}]  The number of data samples considered to be ``unobserved''.
-\item[\emcode{Nc}] The number of data samples in the complete data.
-\item[\emcode{No}] The number of data samples considered to be ``observed''.
-\item[\emcode{Nx}] The number of data samples considered to be ``expected'', under 
-                   the fitted distribution.
-\end{description}
-
-These get set for the five use cases as follows:
-
-\begin{tabular}{rccccc}\hline
-                       & \multicolumn{4}{c}{Case:}\\
-                       & \textbf{1} & \textbf{2} &  \textbf{3}  & \textbf{4}    & \textbf{5} \\ \hline
-Observed data:         &  Complete  & Complete   &  Complete    & Left-censored & Left-censored \\
-Expected distribution: &  Complete  & Complete   &  Right tail  & Complete      & Right tail \\
-Parameters fit to:     &  Complete  & Right tail &  Right tail  & Right tail    & Right tail \\
-Goodness of fit on:    &  Complete  & Right tail &  Right tail  & Right tail    & Right tail \\\hline
-\ccode{z}              &      0     &  \#$<\phi$ & \#$<\phi$    &  specified    &  specified \\
-\ccode{Nc}             &      n     &     n      &     n        &    n+z        &    n+z     \\
-\ccode{No}             &      n     &    n-z     &    n-z       &     n         &     n      \\
-\ccode{Nx}             &      n     &     n      &    n-z       &    n+z        &     n      \\\hline
-\end{tabular}
+A variety of other situations can be dealt with by using different
+combinations of the function calls that deal with these four cases.
 
 
+\subsubsection{Focusing parameter fitting on the highest scores}
+
+An example of focusing a Gumbel parameter fit on the right half of an
+observed distribution:
+
+\input{cexcerpts/histogram_example2}
+
+The key differences from the complete data case are:
+
+\begin{itemize}
+\item Only the high-scoring 50\% of the data samples are
+      retrieved, by calling 
+      \ccode{esl\_histogram\_GetTailByMass(h, 0.5, \&xv, \&n, \&z)}.
+      This returns \ccode{z}, the number of samples that 
+      were \emph{censored}.
+
+\item These data are fit to a Gumbel distribution
+      as a \emph{left-censored} dataset by calling
+      \ccode{esl\_gumbel\_FitCensored(xv, n, z, xv[0], \&mu, \&lambda)}.
+\end{itemize}
+
+The expected counts and the goodness of fit tests are still evaluated
+for the complete data, even though the fit was performed only on the
+highest scores.
 
 
+\subsubsection{Fitting to a tail distribution}
 
+An example of fitting an exponential tail to the high-scoring 10\% of
+a Gumbel-distributed dataset:
 
+\input{cexcerpts/histogram_example3}
 
+The differences to note are:
 
- 
+\begin{itemize}
+\item The tail is fit as if it is \emph{complete} data as far
+      as the exponential distribution is concerned.
 
-\subsection{Displaying data}
+\item As a result, to use the exponential tail to predict expected
+      data, we have to keep in mind how much probability mass the tail
+      is supposed to predict (here, 10\%), and that
+      is provided to
+      \ccode{esl\_histogram\_SetExpectedTail()}, which specifically
+      calculates expected counts for a tail.
+\end{itemize}
 
+\subsubsection{Fitting left-censored data}
 
+Fitting a Gumbel distribution to data that are \emph{truly} left
+censored looks a lot like the case where we extracted the high scoring
+data for a censored fit:
 
+\input{cexcerpts/histogram_example4}
 
+\subsubsection{Fitting binned data to a tail distribution}
 
+Normally, you want to fit parameters to the actual individual data
+samples, not to binned data, because you'll get more accurate results.
+An exception can arise when the data samples have limited precision
+because they've been rounded off. Most distributions are not sensitive
+to this, but some tail densities are, especially those with
+singularities ($P(X=x) \rightarrow \infty$) at their origin. In such a
+case, a fit to binned data may be superior, especially if you can
+match the histogram's bins to the rounding procedure that was used.
 
+The following code shows an example of fitting for samples rounded up
+to the nearest integer:
 
-\subsection{Goodness of fit tests for observed data and expected distributions}
+\input{cexcerpts/histogram_example5}
+
+Issues to note:
+
+\begin{itemize}
+\item The \ccode{esl\_histogram\_Create(-100, 100, 1.0)} call
+      defined bins that exactly match the rounding procedure
+      defined by \ccode{ceil(x)} -- all $x$ that are rounded
+      to the same value by \ccode{ceil(x)} would also go in
+      the same bin of the histogram.
+
+\item The \ccode{esl\_histogram\_SetTailByMass()} function sets flags
+      in the histogram to demarcate the desired tail.  However,
+      because the data have been binned, and we can only define the
+      tail by a range of bins, it will generally be impossible to
+      match the requested tail mass with adequate accuracy; the actual
+      tail mass is $\geq$ the requested tail mass. It is returned
+      to the caller, and it is the actual mass, not the requested mass,
+      that should be used when setting expected counts.
+
+\item The \ccode{esl\_histogram\_SetRounding()} declaration
+      sets a flag in the histogram that tells binned parameter
+      fitting functions that the origin of the fitted
+      density ($\mu$) should be set at the lower bound of the smallest bin,
+      rather than the smallest raw data value observed in that 
+      bin. 
+\end{itemize}
+
 
