Moved the stopwatch module in from squid, and documented.
git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@91 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/documentation/main.tex
+++ b/documentation/main.tex
@@ -132,6 +132,12 @@ error?} \hspace{3em} -- Franz Kafka, \emph{The Castle}
 \input{autotext/esl_stack_functions}
 
 \newpage
+\section{stopwatch: internal timing of processes}
+\input{../esl_stopwatch}
+\subsection{Functions in the stopwatch module}
+\input{autotext/esl_stopwatch_functions}
+
+\newpage
 \section{The vectorops module: simple vector operations}
 \input{../esl_vectorops}
 \subsection{Functions in the vectorops module}
