--- a/esl_random.tex
+++ b/esl_random.tex
@@ -39,6 +39,7 @@ The API consists of the following functions:
 \ccode{esl\_rnd\_FChoose()}                 & Choose integer according to a probability vector.\\
 \ccode{esl\_rnd\_IID()}                     & Generate an i.i.d. symbol sequence.\\ \hline
 \end{tabular}
+\vspace{1em}
 
 The algorithm implemented by \ccode{esl\_random()} is strong, but a
 bit slow compared to some other strong random number generators. It is
